CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

4 January 2008
+ Fixed Bug 1843292, Peter Heppner : RSS Feeds with Encoding 8859-1
  and Umlauts 

3 January 2008
+ Cache - added lifetime to get function. Thanks Verdon.
+ Updated Cache_Lite documentation.
+ Updated CREDITS file adding a little more info.


Version 1.7.2
---------------------------------------------------------------------
2 Jan 2008
+ DBPager - changed to prevent XSS (thanks to Audun Larsen) and allow
            accented characters.
+ Text - accented characters allow in chars_space check in isValidInput


14 December 2007
+ DBPager
  o Added error check to run function
  o Added ability to toggle search label, clear button, and submit
    button.
+ Form - new form element with addReset creates form reset button.

13 December 2007
+ File - makeThumbnail returns the dimensions of the new thumbnail and
         not the limits

12 December 2007
+ Patch #1821914 - Eloi George's addition of a 'last' parameter for
  DBPager.
+ Patch #1821701 - Removed invalid css overflow properties.
+ Updated German translation file from Peter Heppner

Version 1.7.1
---------------------------------------------------------------------
10 December 2007
+ Core - small change to getHomeHttp to try and fix IIS error.
+ Database
  o changed groupBy to group_by to match rest of variable names
  o Group by added on distinct columns only if count is not set.
+ DBPager
  o Pager clears order, columns, and group_by before figuring totals.
  o total_column creation needed table to be included.


7 December 2007
+ DBPager
  o New method to determine total rows. If a primary index
    is found, counts on it.
  o New function setTotalColumn to force count column.
+ Database
  o getIndex can now be passed a table name. If it is not,
    assumes current table.
  o addColumn has a distinct parameter again.
  o Transaction support added.
